<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.matrixsoft.RegisterLoaderActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>

    <item
        android:id="@+id/registration_notification"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/registration_notification"/>


    <item
        android:id="@+id/action_myprofile"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_myprofile"/>


    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="@string/action_search"/>

</menu>
